# email-assistant

./: .gitignore  README.md  pyproject.toml
app/: crud.py  database.py  helper.py  main.py  models.py  routes.py  schemas.py
